移植服务端合成与流体链 / Port server crafting and fluid chains